--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generate-react-doc",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "CLI tool that generates React documentation",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/younabobo/generate-react-doc#readme",
   "dependencies": {
-    "react-docgen-markdown-renderer": "^2.1.3"
+    "react-docgen-markdown-renderer": "^2.1.3",
+    "react-docgen": "^3"
   }
 }
